--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="container_nav">
                 <a href="index.html"><img src="images/logo.png" width="350" height="80" alt="logo"></a>
                 <a href="">About Us</a>
-                <a href="">Contact Us</a>
+                <a href="/contactus/contact.html">Contact Us</a>
                 <a href="index.html">Home</a>
             </div>
         </div>
