added gallery to navbar

--- a/contactus/contact.html
+++ b/contactus/contact.html
@@ -14,6 +14,7 @@
         <div class="navbar">
             <div class="container_nav">
                 <a href="../index.html"><img src="../contactus/images/logo.png" width="350" height="80" alt="logo"></a>
+                <a href="">Gallery</a>
                 <a href="">About Us</a>
                 <a href="">Contact Us</a>
                 <a href="../index.html">Home</a>
