--- a/contactus/contact.html
+++ b/contactus/contact.html
@@ -14,9 +14,9 @@
         <div class="navbar">
             <div class="container_nav">
                 <a href="../index.html"><img src="../contactus/images/logo.png" width="350" height="80" alt="logo"></a>
-                <a href="">Gallery</a>
+                <a href="../gallery/gallery.html">Gallery</a>
                 <a href="">About Us</a>
-                <a href="">Contact Us</a>
+                <a href="/contactus/contact.html">Contact Us</a>
                 <a href="../index.html">Home</a>
             </div>
         </div>
