--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="navbar">
             <div class="container_nav">
                 <a href="index.html"><img src="images/logo.png" width="350" height="80" alt="logo"></a>
-                <a href="">Gallery</a>
+                <a href="gallery/gallery.html">Gallery</a>
                 <a href="">About Us</a>
                 <a href="/contactus/contact.html">Contact Us</a>
                 <a href="index.html">Home</a>
