made the home gallary image callabe

--- a/index.html
+++ b/index.html
@@ -31,18 +31,18 @@
             <div class="service1">
                 <h5> MacBooks</h5>
                 <img src="images/download3.jpg" alt="This is the image of a Macbook" width="250px" height="250px">
-                <p>For more click <a href=""><i>Gallery</i></a></p>
+                <p>For more click <a href="/gallery/gallery.html"><i>Gallery</i></a></p>
             </div>
 
             <div class="service1">
                 <h5> HP Pro book</h5>
                 <img src="images/hp2.jpg" alt="This is the image of a HP Pro book">
-                <p>For more click <a href=""><i>Gallery</i></a></p>
+                <p>For more click <a href="/gallery/gallery.html"><i>Gallery</i></a></p>
             </div>
             <div class="service1">
                 <h5> Lenovo </h5>
                 <img src="images/lenovo3.jpg" alt="This is the iamge of a Lenovo Laptop">
-                <p>For more click <a href=""><i>Gallery</i></a></p>
+                <p>For more click <a href="/gallery/gallery.html"><i>Gallery</i></a></p>
             </div>
         </div>
     </section>
