--- a/about_us/about.html
+++ b/about_us/about.html
@@ -6,6 +6,18 @@
     <title>Document</title>
 </head>
 <body>
+    <section>
+        <div class="navbar">
+            <div class="container_nav">
+                <a href="index.html"><img src="images/logo.png" width="350" height="80" alt="logo"></a>
+                <a href="gallery/gallery.html">Gallery</a>
+                <a href="">About Us</a>
+                <a href="/contactus/contact.html">Contact Us</a>
+                <a href="index.html">Home</a>
+            </div>
+        </div>
+
+    </section>
     <section id="container">
         <div class="part 1">
             <img src="images/images(1).jpg"width ="350" height ="80" alt="this is an image of about_us">
@@ -21,12 +33,14 @@
             sets us apart from our counter parts.
             </p>
             <p>
-                With a proven records of over 15 years in the computing space. We are continuously <br>
-                determine to serve the Nigerian market cosnistently in rewarding and engaging manner. <br>
-                We are cosnistently serving the Nigerian market in a deligent manner and with a trans <br>
-                parent approach.
+            With a proven records of over 15 years in the computing space. We are continuously <br>
+            determine to serve the Nigerian market cosnistently in rewarding and engaging manner. <br>
+            We are cosnistently serving the Nigerian market in a deligent manner and with a trans <br>
+            parent approach we deliver to your requirment.
             </p>
         </div>
     </section>
+
+    <footer>created by group 2</footer>
 </body>
 </html>
