added the about page

--- a/about_us/about.html
+++ b/about_us/about.html
@@ -1,46 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/about_us/style.css">
+    <title>noadel</title>
 </head>
+<!--         navbar section          -->
+
 <body>
     <section>
         <div class="navbar">
             <div class="container_nav">
-                <a href="index.html"><img src="images/logo.png" width="350" height="80" alt="logo"></a>
-                <a href="gallery/gallery.html">Gallery</a>
-                <a href="">About Us</a>
-                <a href="/contactus/contact.html">Contact Us</a>
-                <a href="index.html">Home</a>
+                <a href="../index.html"><img src="images/logo.png" width="350" height="80" alt="logo"></a>
+                <a href="../gallery/gallery.html">Gallery</a>
+                <a href="/about_us/about.html">About Us</a>
+                <a href="../contactus/contact.html">Contact Us</a>
+                <a href="/index.html">Home</a>
             </div>
         </div>
-
     </section>
-    <section id="container">
-        <div class="part 1">
-            <img src="images/images(1).jpg"width ="350" height ="80" alt="this is an image of about_us">
-        </div>
-        <div class="part2">
-            <h4>About Us</h4>
-            <p>
-            Noadel computers is a top-notch store and number1 stop shop for Nigerians. <br>
-            It is strategically located in the hubspot of computer electronics in a Lagos <br>
-            Noadel computers was created to solve the problem of purchsaing substandard <br>
-            computers. We are vast in our supplier base with an indepth knowledge of the <br>
-            different computers suitable for the Nigerian needs. Our integrity and transparency <br>
-            sets us apart from our counter parts.
-            </p>
-            <p>
-            With a proven records of over 15 years in the computing space. We are continuously <br>
-            determine to serve the Nigerian market cosnistently in rewarding and engaging manner. <br>
-            We are cosnistently serving the Nigerian market in a deligent manner and with a trans <br>
-            parent approach we deliver to your requirment.
-            </p>
+    <!--        about us            -->
+
+    <section>
+        <div class="about">
+            <h1>About Us</h1>
+             <marquee behavior="scroll" direction="up" scrollamount="2"><p>Noadel computers is a top-notch store and number1 stop shop for Nigerians. <br>
+                It is strategically located in the hubspot of computer electronics in a Lagos <br>
+                Noadel computers was created to solve the problem of purchsaing substandard <br>
+                computers. We are vast in our supplier base with an indepth knowledge of the <br>
+                different computers suitable for the Nigerian needs. Our integrity and transparency <br>
+                sets us apart from our counter parts. <br> <br>
+            
+                With a proven records of over 15 years in the computing space. We are continuously <br>
+                determine to serve the Nigerian market cosnistently in rewarding and engaging manner. <br>
+                We are cosnistently serving the Nigerian market in a deligent manner and with a trans <br>
+                parent approach we deliver to your requirment.
+            </p></marquee>
         </div>
     </section>
+    <!--      footer section     -->
+    <section>
+        <div class="footer">
+            <div class="foota">
+                <h3>about us</h3>
+                <p><br> Lorem ipsum dolor sit amet consectetur,<br> <br> adipisicing elit. Necessitatibus, officiis
+                    <br><br> odit. Pariatur
+                    laboriosam deserunt ab id fugiat ipsum! <br><br> Sequi amet corrupti laborum eum libero nemo! <br>
+                </p>
+            </div>
+            <div class="foota">
+                <h3>Our service</h3>
+                <list>
+                    <ul type="circle">
+                        <li>DATA BACKUP & RECOVERY</li> <br>
+                        <li>LAPTOP AND MAC UPGRADE</li> <br>
+                        <li>RPAIR PC & LAPTOP HARDWARE</li> <br>
+                        <li>NETWORK SOLUTION</li> <br>
+                    </ul>
+                </list>
+            </div>
+            <div class="foota">
+                <h3>quick contact</h3>
+                <p> 1st Floor, Pushp Business Centre,
+                    Opp. Ganga Jamuna Hospital,
+                    Subhanpura,Vadodara
+                </p>
+                <p>+2348139569356 | +2349036973905 | <br> <br> +2348037797655 | +2348166498615</p>
+                <br> email: noadel@gmail.com</p>
+            </div>
 
-    <footer>created by group 2</footer>
+        </div>
+
+        <div class="foot">
+            <h3> &#174; noadel computer 2020 | group 2 Tech4Dev&#8482; </h3>
+        </div>
+    </section>
 </body>
+
 </html>
