--- a/contactus/contact.html
+++ b/contactus/contact.html
@@ -15,7 +15,7 @@
             <div class="container_nav">
                 <a href="../index.html"><img src="../contactus/images/logo.png" width="350" height="80" alt="logo"></a>
                 <a href="../gallery/gallery.html">Gallery</a>
-                <a href="">About Us</a>
+                <a href="../about_us/about.html">About Us</a>
                 <a href="/contactus/contact.html">Contact Us</a>
                 <a href="../index.html">Home</a>
             </div>
