--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="container_nav">
                 <a href="index.html"><img src="images/logo.png" width="350" height="80" alt="logo"></a>
                 <a href="gallery/gallery.html">Gallery</a>
-                <a href="">About Us</a>
+                <a href="/about_us/about.html">About Us</a>
                 <a href="/contactus/contact.html">Contact Us</a>
                 <a href="index.html">Home</a>
             </div>
@@ -25,7 +25,9 @@
     <!--        section product           -->
     <section>
         <div class="our_product">
-            <h1>Our Products</h1>
+            <marquee behavior="alternate" direction="right">
+                <h1>Our Products</h1>
+            </marquee>
         </div>
         <div class="brand">
             <div class="service1">
@@ -46,9 +48,108 @@
             </div>
         </div>
     </section>
+    <!-- learn more section -->
+    <section>
+        <div class="learnmore">
+            <div class="more">
+                <h2>learn more</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora rerum in, quaerat harum ipsam earum
+                    similique velit, maxime excepturi iusto, ea veritatis nihil veniam pariatur dicta. Doloribus
+                    consectetur
+                    mollitia facilis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis omnis incidunt
+                    modi
+                    animi odit repudiandae sunt, doloremque quasi dolores pariatur enim beatae iusto illum vero autem
+                    aspernatur unde dolorem error. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Perspiciatis
+                    laborum aut iusto provident, rerum repudiandae quidem facere cumque ipsum iure, cupiditate tempore.
+                    Iure
+                    esse nemo porro, aliquid ea libero voluptatibus? Lorem ipsum dolor sit amet, consectetur adipisicing
+                    elit. Voluptatem dolor quisquam iusto optio quis mollitia fugiat consequuntur temporibus. Dolorum,
+                    magni
+                    magnam. Asperiores est sunt sapiente tenetur. Ratione a repellat cumque?
+                </p>
+            </div>
+            <div class="more">
+                <h2>our client</h2>
+                <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora rerum in, quaerat harum ipsam earum
+                    similique velit, maxime excepturi iusto, ea veritatis nihil veniam pariatur dicta. Doloribus
+                    consectetur
+                    mollitia facilis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis omnis incidunt
+                    modi
+                    animi odit repudiandae sunt, doloremque quasi dolores pariatur enim beatae iusto illum vero autem
+                    aspernatur unde dolorem error. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Perspiciatis
+                    laborum aut iusto provident, rerum repudiandae quidem facere cumque ipsum iure, cupiditate tempore.
+                    Iure
+                    esse nemo porro, aliquid ea libero voluptatibus? Lorem ipsum dolor sit amet, consectetur adipisicing
+                    elit. Voluptatem dolor quisquam iusto optio quis mollitia fugiat consequuntur temporibus. Dolorum,
+                    magni
+                    magnam. Asperiores est sunt sapiente tenetur. Ratione a repellat cumque?
+                </p>
+            </div>
 
+        </div>
+    </section>
+    <!-- team section -->
+    <section>
+        <div>
+            <div class="team">
+                <h2>meet the team</h2>
+            </div>
+            <div class="team_img">
+                <p>HAYWHY</p>
+            </div>
+            <div class="team_img">
+                <p>HEBRAHEEM</p>
+            </div>
+            <div class="team_img">
+                <p>TAIWO</p>
+            </div>
+            <div class="team_img">
+                <p>MIS2RA</p>
+            </div>
+        </div>
+        <section>
 
+            <!--      footer section     -->
+            <section>
+                <div class="footer">
+                    <div class="foota">
+                        <h3>about us</h3>
+                        <p><br> Lorem ipsum dolor sit amet consectetur,<br> <br> adipisicing elit. Necessitatibus,
+                            officiis
+                            <br><br> odit. Pariatur
+                            laboriosam deserunt ab id fugiat ipsum! <br><br> Sequi amet corrupti laborum eum libero
+                            nemo! <br>
+                        </p>
+                    </div>
+                    <div class="foota">
+                        <h3>Our service</h3>
+                        <list>
+                            <ul type="circle">
+                                <li>DATA BACKUP & RECOVERY</li> <br>
+                                <li>LAPTOP AND MAC UPGRADE</li> <br>
+                                <li>RPAIR PC & LAPTOP HARDWARE</li> <br>
+                                <li>NETWORK SOLUTION</li> <br>
+                            </ul>
+                        </list>
+                    </div>
+                    <div class="foota">
+                        <h3>quick contact</h3>
+                        <p> 1st Floor, Pushp Business Centre,
+                            Opp. Ganga Jamuna Hospital,
+                            Subhanpura,Vadodara
+                        </p>
+                        <p>+2348139569356 | +2349036973905 | <br> <br> +2348037797655 | +2348166498615</p>
+                        <br> email: noadel@gmail.com</p>
+                    </div>
 
+                </div>
+
+                <div class="foot">
+                    <h3> &#174; noadel computer 2020 | group 2 Tech4Dev&#8482; </h3>
+                </div>
+            </section>
 </body>
 
 </html>
