comforms to responsiveness

--- a/about_us/about.html
+++ b/about_us/about.html
@@ -26,7 +26,7 @@
     <section>
         <div class="about">
             <h1>About Us</h1>
-             <marquee behavior="scroll" direction="up" scrollamount="2"><p>Noadel computers is a top-notch store and number1 stop shop for Nigerians. <br>
+             <marquee class="maq" behavior="scroll" direction="up" scrollamount="2"><p>Noadel computers is a top-notch store and number1 stop shop for Nigerians. <br>
                 It is strategically located in the hubspot of computer electronics in a Lagos <br>
                 Noadel computers was created to solve the problem of purchsaing substandard <br>
                 computers. We are vast in our supplier base with an indepth knowledge of the <br>
@@ -37,7 +37,7 @@
                 determine to serve the Nigerian market cosnistently in rewarding and engaging manner. <br>
                 We are cosnistently serving the Nigerian market in a deligent manner and with a trans <br>
                 parent approach we deliver to your requirment.
-            </p></marquee>
+            </marquee>
         </div>
     </section>
     <!--      footer section     -->
