--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </section>
 
     <!--        section product           -->
-    <section>
+    <section class="section_res">
         <div class="our_product">
             <marquee behavior="alternate" direction="right">
                 <h1>Our Products</h1>
@@ -92,7 +92,7 @@
     </section>
     <!-- team section -->
     <section>
-        <div>
+        <div class="meet">
             <div class="team">
                 <h2>meet the team</h2>
             </div>
