rearange the images file

--- a/index.html
+++ b/index.html
@@ -97,19 +97,19 @@
                 <h2>meet the team</h2>
             </div>
             <div class="team_img">
-                <img src="/ay.jpeg" width="200px" height="200px" alt="">
+                <img src="/images/ay.jpeg" width="200px" height="200px" alt="">
                  <p>HAYWHY</p>
             </div>
             <div class="team_img">
-                <img src="/ib.jpeg" width="200px" height="200px" alt="">
+                <img src="/images/ib.jpeg" width="200px" height="200px" alt="">
                 <p>HEBRAHEEM</p>
             </div>
             <div class="team_img">
-                <img src="/taiwo.jpeg" width="200px" height="200px" alt="">
+                <img src="/images/taiwo.jpeg" width="200px" height="200px" alt="">
                 <p>TAIWO</p>
             </div>
             <div class="team_img">
-                <img src="/mistu.jpeg"  width="200px" height="200px"alt="">
+                <img src="/images/mistu.jpeg"  width="200px" height="200px"alt="">
                 <p>MIS2RA</p>
             </div>
         </div>
